<resources>
    <string name="app_name">The Banker</string>
    <string name="action_settings">Settings</string>

    <!--[START] UI Labels String resource -->

    <!--General UI -->
    <string name="game_id">Game Id:</string>
    <string name="ok_button_label">Ok</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="txt_player_balance">Balance: </string>

    <!--Start Page-->
    <string name="create_game_button_label">Create Game</string>
    <string name="join_game_button_label">Join game</string>

    <!--Dialogs-->
    <string name="game_id_hint">Game Id</string>
    <string name="nickname_input_hint">Nickname</string>
    <string name="join_lobby_leave_string">Leave</string>
    <string name="pay_bank_button_label">Pay</string>
    <string name="host_lose_string">You have run out of money! As the Banker you must keep observing the game and confirming payments</string>
    <string name="non_host_lose_string">You have run out of money! You will be taken to the home screen</string>
    <string name="winner_message_string">Congratulations! All other players have run out of money, you are the winner!</string>
    <string name="non_winner_message_string">%1$s is the winner! Good game, you will be taken to the home screen</string>

    <!--Host Lobby-->
    <string name="host_lobby_start_button_string">Start</string>

    <!-- Host Game -->
    <string name="host_game_get_money_from_bank_btn_label">Get from bank</string>
    <string name="host_game_pay_bank_btn_label">Pay Bank</string>

    <!-- Join Game -->
    <string name="join_game_pay_bank_button">Pay Bank</string>
    <string name="join_game_request_from_bank_label">Request Money From Bank</string>

    <!--[END] UI String resource -->

    <!--[START] Subscription Log Message String Resources  -->
    <string name="msg_subscribed">Subscribed to %$gameId topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribe_failed">Failed to subscribe to %$gameId topic</string>
    <string name="fcm_message">FCM Message</string>
    <!--[END] Subscription Log Message String Resources -->

    <!--[START] Notification Channel Strings  -->
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="default_notification_channel_name">default_notification_channel_name</string>
    <!--[END] Notification Channel Strings -->

    <!--[START] Input Validation Responses-->
    <string name="invalid_name_msg">"Invalid Player Name"</string>
    <string name="invalid_game_id_format_msg">"Game ID consists of 6 alphanumeric chars"</string>
    <string name="payment_input_hint">Enter Payment Amount</string>
    <!--[END] Input Validation Responses-->

    <!--[START] Notification Drawer Strings-->
    <string name="notification_from_msg">From: %1$s</string>
    <string name="notification_amount_msg">Amount: $%1$s</string>

    <string name="notification_type_bank_debit_msg">Sending money to bank</string>
    <string name="notification_type_bank_credit_msg">Collecting money from bank</string>
    <string name="notification_type_player_transaction_send_msg">Sending money to you</string>
    <string name="notification_type_player_transaction_request_msg">Requesting money from you</string>
    <!--[END] Notification Drawer Strings-->


    <!--TODO TIDY THIS SECTION UP-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="confirm_transaction_label">Confirm</string>
    <string name="decline_transaction_label">Decline</string>

</resources>
