<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txt_player_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/txt_player_balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/playerList"
        android:layout_width="match_parent"
        android:layout_height="347dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_start"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_start"
        style="@android:style/Widget.Material.Button.Small"
        android:layout_width="144dp"
        android:layout_height="49dp"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="39dp"
        android:text="@string/host_game_get_money_from_bank_btn_label"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel" />

    <Button
        android:id="@+id/btn_cancel"
        style="@android:style/Widget.Material.Button.Small"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:text="@string/host_game_pay_bank_btn_label"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toStartOf="@+id/btn_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerList" />

</android.support.constraint.ConstraintLayout>