<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/txt_game_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/game_id"
        app:layout_constraintBottom_toTopOf="@+id/playerList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/playerList"
        android:layout_width="match_parent"
        android:layout_height="311dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar1"
        app:layout_constraintTop_toBottomOf="@+id/txt_game_id"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_get_from_bank"
        style="@android:style/Widget.Material.Button.Small"
        android:layout_width="144dp"
        android:layout_height="49dp"
        android:layout_marginBottom="29dp"
        android:layout_marginStart="16dp"
        android:text="@string/host_lobby_start_button_string"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_pay_bank"
        style="@android:style/Widget.Material.Button.Small"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel_button_label"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="@android:style/Widget.Holo.Light.ProgressBar.Inverse"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="172dp"
        android:layout_marginStart="172dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_pay_bank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>